# ActiveMirrorOS

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DRILL_TEST.md  LEGAL_NOTICE.md  LICENSE  PLAN.md  PLAN_v2.0.md  README.md  ROADMAP.md  SECURITY.md  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: validate.yml
.vault/: manifest.yml
00_CORE/: Architecture_Spine_v1.0.md  ami_active-mirror.json  ami_active-mirror.json.bak  handoff_state.json  mirror_seed.json
00_CORE/launch_agents/: com.mirror.dreaming.plist
00_CORE/services/: dreaming_daemon.py
00_CORE/tools/: generate_seed.py  mirrorbrain_mlx_chat.py  test_seed.py
apps/activemirror-v3/: app.js  cognitive-bridge.css  cognitive-bridge.js  cognitive-os.js  cognitive-ui.css  collective-intelligence.js  command-center.js  context-pane.js  dev.sh  event-hub.js  file-intelligence.js  floating-dock.css  future-self.js  image-gen.js  index-2030.html  index-friendly.html  index.html  inference_router.py  life-stack.js  nudges.js  quantum-self.js  quick-tools.js  reality-composer.js  safety_proxy.py  server.js  setup_phase1.sh  start.sh  styles.css  test_tiers.py  tools-dock.js  updates.json  verify.py  webllm-engine.js  wow-features.js
apps/example-cli/: README.md  amos-cli.js  package.json
apps/example-desktop/: README.md  index.html  (+4 more)
config/: amos.boot.json
continuity/: BOOT.json  Graph_v1.json  Snapshot_Latest.md
demo/: README.md  config.yaml  demo_app.py  demo_continuity_showcase.md  demo_conversation.md  demo_reflective_ai.md  requirements.txt
docs/: .gitkeep  ARCHITECTURE_DIAGRAM.md  Boot_Quickstart.md  COMPLETION_REPORT.md  Paper2_Layered_Governance_LLM_Systems.md  README.md  Semantic_Retrieval_Guide.md  api-reference.md  api.md  architecture.md  configuration.md  demos_overview.md  faq.md  integration.md  overview.md  pricing.md  product_overview.md  quickstart.md  reflective-behaviors.md  roadmap.md  state-persistence.md
eval/: run_evaluation.py
examples/: README.md  basic_session.py  config_example.py  multi_session.py
mobile/: App.js  README.md  app.json  package.json
onboarding/: getting_started.md  glossary.md  install_lingos_lite.md  troubleshooting.md  upgrade_to_lingos_pro.md
products/: README.md
scripts/: build_semantic_index.py  generate_demo_package.py  sovereign_save.sh  sovereignty_audit.py
sdk/: api_examples.md  javascript_starter.js  local_llm_integration.md  python_starter.py
src/: .gitkeep
starters/: api_examples.md  curl_examples.sh  javascript_starter.js  local_llm_integration.md  python_starter.py
tests/: README.md  __init__.py  conftest.py  test_amgl_guard.py
(+86 files in other folders)
